--- a/dashboard.html
+++ b/dashboard.html
@@ -34,6 +34,6 @@
   </div>
 
   <script src="js/firebase.js"></script>
-  <script src="js/dashboard.js"></script>
+  <script type="module" src="js/dashboard.js"></script>
 </body>
 </html>
