--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </div>
 
   <!-- Firebase -->
-  <script src="js/auth.js"></script>
+  <script type="module" src="js/auth.js"></script>
 </body>
 </html>
