--- a/index.html
+++ b/index.html
@@ -41,13 +41,40 @@
             </button>
         </form>
 
+        <form id="registerForm" class="hidden">
+            <div class="form-group">
+                <label for="reg-email">Email Address</label>
+                <input type="email" id="reg-email" class="form-control" placeholder="manager@example.com" required>
+            </div>
+            
+            <div class="form-group">
+                <label for="reg-manager">Manager Name</label>
+                <input type="text" id="reg-manager" class="form-control" placeholder="e.g. Dato' Lee" required>
+            </div>
+
+            <div class="form-group">
+                <label for="reg-team">Team Name</label>
+                <input type="text" id="reg-team" class="form-control" placeholder="e.g. Harimau Selatan FC" required>
+            </div>
+
+            <div class="form-group">
+                <label for="reg-password">Password</label>
+                <input type="password" id="reg-password" class="form-control" placeholder="Create a strong password" required>
+            </div>
+
+            <button type="submit" class="btn-primary">
+                Daftar / Register
+            </button>
+        </form>
+
         <div class="divider">
+
             <span>OR</span>
         </div>
 
         <div class="form-footer">
-            <p>Don't have a team yet?</p>
-            <a href="#" class="link">Register for Season 2026</a>
+            <p id="footerText">Don't have a team yet?</p>
+            <a href="#" id="toggleFormBtn" class="link">Register for Season 2026</a>
         </div>
     </div>
 
