--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             <div class="form-group">
                 <label>Password</label>
                 <input type="password" id="loginPass" class="form-control" placeholder="••••••••" required>
-            </div>
-            <button type="submit" class="btn-primary">Masuk / Login</button>
+        </div>
+        <p id="forgotBtn" style="text-align: right; color: #0E1E5B; font-size: 0.8rem; margin-bottom: 15px; cursor: pointer; text-decoration: underline;">Forgot Password?</p>
+        <button type="submit" class="btn-primary">Masuk / Login</button>
         </form>
 
         <form id="registerForm" class="hidden">
@@ -94,6 +95,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
