--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     
+    <div id="loading-overlay">
+        Loading M-League...
+    </div>
+
     <div id="auth-screen" class="login-container">
         <div class="brand-header">
             <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#0E1E5B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
