--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
         </div>
     </div>
 
+    <div id="selection-screen" class="selection-modal hidden">
+        <div class="selection-header">
+            <h3>Draft Your Squad</h3>
+            <small>Pick 15 Players</small>
+        </div>
+        <div id="players-container">
+            </div>
+        <div class="selection-footer">
+            <div class="counter-box">Selected: <span id="squadCount">0</span>/15</div>
+            <button id="confirmSquadBtn" class="btn-primary" style="width: auto; margin: 0;" disabled>Confirm Squad</button>
+        </div>
+    </div>
+
     <script type="module" src="script.js"></script>
 </body>
 </html>
