--- a/index.html
+++ b/index.html
@@ -122,9 +122,19 @@
 
     <div id="selection-screen" class="selection-modal hidden">
         <div class="selection-header">
-            <h3>Draft Your Squad</h3>
-            <small>Pick 15 Players</small>
+            <h3>Squad Selection</h3>
+            <small>Season 2026</small>
         </div>
+        
+        <div class="selection-rules">
+            <h4>📋 Squad Rules</h4>
+            <ul>
+                <li><strong>Budget:</strong> Max RM 100M</li>
+                <li><strong>Team Limit:</strong> Max 3 Players per Club</li>
+                <li><strong>Structure:</strong> 2 GK • 5 DEF • 5 MID • 3 FWD</li>
+            </ul>
+        </div>
+
         <div id="players-container">
             </div>
         <div class="selection-footer">
