--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
             </ul>
         </div>
 
+        <div id="gw-deadline" class="deadline-banner">
+            Loading Deadline...
+        </div>
+
         <div id="players-container">
             </div>
         <div class="selection-footer">
