--- a/index.html
+++ b/index.html
@@ -139,7 +139,31 @@
             Loading Deadline...
         </div>
 
+        <div class="selection-stats-card">
+            <div class="stats-row border-bottom">
+                <div class="stat-item">
+                    <small>Manager</small>
+                    <span id="selManager">...</span>
+                </div>
+                <div class="stat-item text-right">
+                    <small>Team</small>
+                    <span id="selTeam">...</span>
+                </div>
+            </div>
+            <div class="stats-row">
+                <div class="stat-item">
+                    <small>Selected</small>
+                    <strong id="selCount">0/15</strong>
+                </div>
+                <div class="stat-item text-right">
+                    <small>Bank Balance</small>
+                    <strong id="selBank" style="color: var(--color-primary-blue);">RM 100.0M</strong>
+                </div>
+            </div>
+        </div>
+
         <div id="players-container">
+
             </div>
         <div class="selection-footer">
             <div class="counter-box">Selected: <span id="squadCount">0</span>/15</div>
