--- a/index.html
+++ b/index.html
@@ -179,6 +179,14 @@
                     <button id="closePitchBtn">✕</button>
                 </div>
                 <div class="modal-pitch">
+                    <div class="pitch-lines">
+                        <div class="box-penalty-top"></div>
+                        <div class="box-goal-top"></div>
+                        <div class="line-center"></div>
+                        <div class="box-penalty-bottom"></div>
+                        <div class="box-goal-bottom"></div>
+                    </div>
+
                     <div class="pitch-row" id="row-GK"></div>
                     <div class="pitch-row" id="row-DEF"></div>
                     <div class="pitch-row" id="row-MID"></div>
