--- a/index.html
+++ b/index.html
@@ -195,6 +195,27 @@
             </div>
         </div>
 
+        <div id="action-modal" class="market-overlay hidden" style="z-index: 4100;">
+             <div class="market-content" style="height: auto; min-height: 300px;">
+                <div class="market-header">
+                    <h3>Player Profile</h3>
+                    <button id="closeActionBtn" style="background:none; border:none; cursor:pointer; color: #666;">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                    </button>
+                </div>
+                <div class="action-body" style="padding: 20px; text-align: center; flex: 1; display:flex; flex-direction:column; align-items:center; justify-content:center;">
+                    <img id="actionKit" src="" class="action-kit">
+                    <h2 id="actionName" style="color: var(--color-primary-blue); margin-bottom: 5px;">Player Name</h2>
+                    <p id="actionInfo" style="color: #666; font-size: 0.9rem; margin-bottom: 25px; font-weight:600;">POS • Team • RM 0.0M</p>
+                    
+                    <div style="display: flex; gap: 10px; width: 100%;">
+                        <button id="btnRemove" class="btn-danger" style="flex:1; padding: 12px; border-radius: 8px; cursor: pointer;">Remove</button>
+                        <button id="btnReplace" class="btn-primary" style="flex:1; margin:0;">Replace</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="selection-footer">
             <div class="counter-box">Selected: <span id="squadCount">0</span>/15</div>
             <button id="confirmSquadBtn" class="btn-primary" style="width: auto; margin: 0;" disabled>Confirm Squad</button>
