--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
 
         <div class="pitch-inline-container">
-            <div class="modal-pitch" style="border-radius: 8px; min-height: 550px; margin-bottom: 80px;">
+            <div class="modal-pitch" style="border-radius: 8px; min-height: 550px;">
                 <div class="pitch-lines">
                     <div class="box-penalty-top"></div>
                     <div class="box-goal-top"></div>
