--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <button id="resetBtn" class="btn-danger" style="flex:1; border-radius:8px; margin:0;">Reset</button>
                 <button id="confirmSquadBtn" class="btn-primary" style="flex:2; margin:0;" disabled>Confirm</button>
             </div>
-        </div
+        </div>
 
     <script type="module" src="script.js"></script>
 </body>
