--- a/index.html
+++ b/index.html
@@ -217,8 +217,10 @@
         </div>
 
         <div class="selection-footer">
-            <div class="counter-box">Selected: <span id="squadCount">0</span>/15</div>
-            <button id="confirmSquadBtn" class="btn-primary" style="width: auto; margin: 0;" disabled>Confirm Squad</button>
+            <div style="display:flex; gap:10px; width:100%; max-width: 500px; margin: 0 auto; padding-bottom: 20px;">
+                <button id="resetBtn" class="btn-danger" style="flex:1; margin:0; box-shadow: 0 4px 12px rgba(210, 16, 52, 0.3);">Reset</button>
+                <button id="confirmSquadBtn" class="btn-primary" style="flex:2; margin:0; box-shadow: 0 4px 12px rgba(14, 30, 91, 0.3);" disabled>Confirm</button>
+            </div>
         </div>
 
     <script type="module" src="script.js"></script>
