--- a/index.html
+++ b/index.html
@@ -121,7 +121,13 @@
     </div>
 
     <div id="selection-screen" class="selection-modal hidden">
+        <div id="sidebarBackdrop" class="sidebar-backdrop"></div>
+
         <div class="selection-sidebar">
+        <button id="sidebarCloseBtn" class="sidebar-close-btn">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+        </button>
+
         <div class="sidebar-logo">M-League</div>
         <button class="sidebar-nav active">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
@@ -134,16 +140,19 @@
         </button>
     </div>
 
-        <div class="selection-main-wrapper">
-            <div class="selection-header">
-                <div style="display:flex; align-items:center; gap:15px;">
-                    <button id="sidebarToggle" class="btn-burger">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
-                    </button>
-                    <h3>Squad Selection</h3>
-                </div>
-                <small>Season 2026</small>
+        <div class="selection-right-column">
+        
+        <div class="selection-header">
+            <div style="display:flex; align-items:center; gap:15px;">
+                <button id="sidebarToggle" class="btn-burger">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+                </button>
+                <h3>Squad Selection</h3>
             </div>
+            <small>Season 2026</small>
+        </div>
+
+        <div class="selection-main-wrapper">
         
         <div class="selection-rules">
             <h4 style="display:flex; align-items:center; gap:8px;">
@@ -241,7 +250,6 @@
                 <button id="confirmSquadBtn" class="btn-primary" style="flex:2; margin:0; box-shadow: 0 4px 12px rgba(14, 30, 91, 0.3);" disabled>Confirm</button>
             </div>
         </div>
-
-    <script type="module" src="script.js"></script>
+    </div> </div> </div> <script type="module" src="script.js"></script>
 </body>
 </html>
