--- a/index.html
+++ b/index.html
@@ -245,9 +245,13 @@
         </div>
 
         <div class="selection-footer">
-            <div style="display:flex; gap:10px; width:100%; max-width: 500px; margin: 0 auto; padding-bottom: 20px;">
-                <button id="resetBtn" class="btn-danger" style="flex:1; margin:0; box-shadow: 0 4px 12px rgba(210, 16, 52, 0.3);">Reset</button>
-                <button id="confirmSquadBtn" class="btn-primary" style="flex:2; margin:0; box-shadow: 0 4px 12px rgba(14, 30, 91, 0.3);" disabled>Confirm</button>
+            <div class="footer-actions">
+                <button id="autoPickBtn" class="btn-action-auto">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg>
+                    Auto
+                </button>
+                <button id="resetBtn" class="btn-action-reset">Reset</button>
+                <button id="confirmSquadBtn" class="btn-action-confirm" disabled>Confirm</button>
             </div>
         </div>
     </div> </div> </div> <script type="module" src="script.js"></script>
