--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
             <div class="divider"><span>OR</span></div>
 
             <div id="googleBtnContainer">
-                </div>
+            </div>
+
+            <div class="card-footer">
+                <p>New to M-League Fantasy?</p>
+                <button type="button" class="btn-secondary" onclick="window.location.href='register.html'">Create an Account</button>
+            </div>
         </main>
     </div>
     <script src="auth.js"></script>
