--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
             <div class="divider"><span>OR</span></div>
 
-            <div id="googleBtnContainer">
-            </div>
+            <button type="button" class="btn-google" id="customGoogleBtn">
+                <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" alt="Google Logo">
+                <span>Sign in with Google</span>
+            </button>
 
             <div class="card-footer">
                 <p>New to M-League Fantasy?</p>
