--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                     <label for="email">Email Address</label>
                     <input type="email" id="email" placeholder="Enter your email" required>
                 </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" placeholder="••••••••" required>
+                </div>
                 <button type="submit" class="btn-primary">Continue with Email</button>
             </form>
 
