--- a/register.html
+++ b/register.html
@@ -27,6 +27,10 @@
                     <label for="regEmail">Email Address</label>
                     <input type="email" id="regEmail" placeholder="Enter your email" required>
                 </div>
+                <div class="input-group">
+                    <label for="regPassword">Password</label>
+                    <input type="password" id="regPassword" placeholder="Minimum 6 characters" required>
+                </div>
                 <button type="submit" class="btn-primary">Register Team</button>
             </form>
 
