--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
             </div>
         </main>
     </div>
-    <script src="auth.js"></script>
+    <script src="auth.js" type="module"></script>
 </body>
 </html>
