--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M-League Fantasy | Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body class="dashboard-body">
     <div class="app-container">
@@ -16,12 +17,13 @@
         </div>
 
         <nav class="floating-nav">
+            <div class="nav-indicator"></div>
             <ul class="nav-list">
-                <li class="nav-item active"><a href="#">Home</a></li>
-                <li class="nav-item"><a href="#">Squad</a></li>
-                <li class="nav-item"><a href="#">Transfer</a></li>
-                <li class="nav-item"><a href="#">League</a></li>
-                <li class="nav-item"><a href="#">Profile</a></li>
+                <li class="nav-item active"><a href="#"><span class="material-symbols-outlined">home</span><span class="nav-label">Home</span></a></li>
+                <li class="nav-item"><a href="#"><span class="material-symbols-outlined">group</span><span class="nav-label">Squad</span></a></li>
+                <li class="nav-item"><a href="#"><span class="material-symbols-outlined">swap_horiz</span><span class="nav-label">Transfer</span></a></li>
+                <li class="nav-item"><a href="#"><span class="material-symbols-outlined">leaderboard</span><span class="nav-label">League</span></a></li>
+                <li class="nav-item"><a href="#"><span class="material-symbols-outlined">person</span><span class="nav-label">Profile</span></a></li>
             </ul>
         </nav>
     </div>
