--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,37 @@
                 <h1>M-League <span>Fantasy</span></h1>
                 <p>Welcome back, Manager</p>
             </header>
+
+            <div class="manager-card">
+                <div class="card-header">
+                    <div class="header-info">
+                        <h2 id="displayTeamName">Loading Team...</h2>
+                        <p id="displayMgrName">Manager Name</p>
+                    </div>
+                    <div class="rank-pill">
+                        <span class="rank-label">Global Rank</span>
+                        <span class="rank-value">#--</span>
+                    </div>
+                </div>
+                <div class="stats-grid">
+                    <div class="stat-item">
+                        <span class="stat-label">GW</span>
+                        <span class="stat-value">1</span>
+                    </div>
+                    <div class="stat-item highlight">
+                        <span class="stat-label">Points</span>
+                        <span class="stat-value" id="gwPoints">0</span>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-label">Average</span>
+                        <span class="stat-value">34</span>
+                    </div>
+                    <div class="stat-item">
+                        <span class="stat-label">Highest</span>
+                        <span class="stat-value">82</span>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <nav class="floating-nav">
