--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,10 @@
                     </div>
                     <div class="rank-pill">
                         <span class="rank-label">Global Rank</span>
-                        <span class="rank-value">#--</span>
+                        <div class="rank-display">
+                            <span class="rank-value">#--</span>
+                            <span class="rank-trend material-symbols-outlined">trending_up</span>
+                        </div>
                     </div>
                 </div>
                 <div class="stats-grid">
@@ -43,6 +46,10 @@
                         <span class="stat-label">Highest</span>
                         <span class="stat-value">82</span>
                     </div>
+                </div>
+                <div class="card-action">
+                    <span>View My Full Squad</span>
+                    <span class="material-symbols-outlined">chevron_right</span>
                 </div>
             </div>
         </div>
