--- a/dashboard.html
+++ b/dashboard.html
@@ -51,6 +51,16 @@
                     <span class="material-symbols-outlined">chevron_right</span>
                 </div>
             </div>
+
+            <div class="deadline-card">
+                <div class="deadline-info">
+                    <span class="deadline-label">Next Deadline</span>
+                    <span class="deadline-gw">GW 2</span>
+                </div>
+                <div class="deadline-timer" id="countdownTimer">
+                    00d 00h 00m 00s
+                </div>
+            </div>
         </div>
 
         <nav class="floating-nav">
