--- a/dashboard.html
+++ b/dashboard.html
@@ -55,7 +55,7 @@
             <div class="deadline-card">
                 <div class="deadline-info">
                     <span class="deadline-label">Next Deadline</span>
-                    <span class="deadline-gw">GW 2</span>
+                    <span class="deadline-gw" id="deadlineGW">GW 2</span>
                 </div>
                 <div class="deadline-timer" id="countdownTimer">
                     00d 00h 00m 00s
