--- a/dashboard.html
+++ b/dashboard.html
@@ -89,6 +89,26 @@
                 <li class="nav-item"><a href="#"><span class="material-symbols-outlined">person</span><span class="nav-label">Profile</span></a></li>
             </ul>
         </nav>
+
+        <div id="googleProfileModal" class="modal-overlay" style="display: none;">
+            <div class="modal-content">
+                <header class="brand">
+                    <h1>Setup <span>Profile</span></h1>
+                    <p>Complete your manager details</p>
+                </header>
+                <form id="googleProfileForm">
+                    <div class="input-group">
+                        <label for="newMgrName">Manager Name</label>
+                        <input type="text" id="newMgrName" placeholder="e.g. Ali Abu" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="newTeamName">Fantasy Team Name</label>
+                        <input type="text" id="newTeamName" placeholder="e.g. Selangor Warriors" required>
+                    </div>
+                    <button type="submit" class="btn-primary">Start My Career</button>
+                </form>
+            </div>
+        </div>
     </div>
     <script src="auth.js" type="module"></script>
 </body>
