--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dashboard-body">
     <div class="app-container">
-        <div id="dashboardContent">
+        <div id="dashboardContent" style="visibility: hidden;">
             <div id="homeView">
                 <header class="brand">
                     <h1>M-League <span>Fantasy</span></h1>
